# bellcore-mgr

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Configfile.m4  Configure  README.rst
cmake/: PackagingConfig.cmake
doc/: CMakeLists.txt  doc.3  doc.4  manual.out
doc/croff/: CMakeLists.txt  croff.1  croff.l  hash.c  hash.h  mktable.c
include/mgr/: hfont.h  mgr.h  restart.h  window.h
src/: CMakeLists.txt  Makefile
src/clients/: CMakeLists.txt
src/clients/Ft2fnt/: ft2fnt.c
src/clients/MDmgrload/: term.h  window.h
src/clients/Rmgr/: rmgr.c
src/clients/Sun/: ether.1  ether.c  ether2.c  invert_color.c  overlay.1  overlay.c  overlayd.c  set_colormap.1  set_colormap.c  stat.1  stat.c  stat2.c
src/clients/bitblit/simple/: fade.c  mgrlock.c  mgrmag.c  screendump.c  snap.c
src/clients/examples/: art_data.c  bounce.1  bounce.c  cycle.1  cycle.c  grav.c  grid.c  hilbert.c  mgreyes.c  oclose.1  oclose.c  stringart.1  stringart.c  walk.c
src/clients/icon/: zoom.1  zoom.c
src/clients/misc/: dmgr.c  hp_raster.c  lasergrafix.c  rotate.1  set_console.c  show.1  tjfilter.1  tjfilter.c
src/clients/movie/: play_data.c  shrink_map.c  to_binary.c
src/clients/portable/: Nethack.sh
src/clients/portable/Msg/: Makefile.old  README  client.c  do.c  do.h  do_file  do_more  do_vi  menus.c  send.c  start
src/clients/portable/Vcr/: vcr.c
src/clients/portable/hpmgr/: hpmgr.c
src/clients/portable/ico/: ico.c
src/clients/portable/ify/: setname.c
src/clients/portable/mgrload/: getload.c  mgrload.c
src/clients/portable/mgrplot/: mgrplot.1  mgrplot.c
src/clients/portable/mgrsketch/: mgrsketch.c
src/clients/portable/mphoon/: bigmoon.c  coherent.c  colorport.c  dtime.c  freebsd.c  hpux.c  linux.c  moon.c  phase.c  smallmoon.c
src/clients/portable/sh/: bury  bury.1  c_menu  c_menu.1  color  cursor  shape  shape.1  showfont  square
src/clients/portable/simple/: browse.c  chess.c  clock.c  clock2.c  clock3.c  close.1  close.c  cut.1  cut.c  iconmail.1  iconmail.c  iconmsgs.1  iconmsgs.c  maze.1  maze.c  mclock.c  mgrbiff.c  mgrfont2vga.c  mgrmail.1  mgrmail.c  mgrmsgs.1  mgrmsgs.c  mgrsclock.c  mgrshowfont.c  omgrmail.1  omgrmail.c  pbmrawtomgr.c  pgmrawtomgr.c  set_termcap.1  squeeze.c  startup.c  window_print.1  window_print.c
src/clients/portable/texmgr/libtex/: conv.c  dvi_draw.c  dviclass.c  findpost.c  fio.c  font_subr.c  gfclass.c  gffont.c  gripes.c  pkfont.c  pxlfont.c  rotate.c  scaletfm.c  scanpost.c  search.c  seek.c  split.c  tfm.c  tfmfont.c
src/clients/portable/xbd/: field.c  scores.c  shared.c  xbd.c
src/clients/tests/: spot.1  test_rop.c
src/libbitblit/: CMakeLists.txt  Makefile
src/libbitblit/3b1/: blit.c
src/libbitblit/Movieport/: Makefile  blit.tc  line.c
src/libbitblit/bitmap/: bit_alloc.c  bit_create.c  bit_open.c  bitmaphead.c
src/libbitblit/blit/: Makefile  README  asm.h  bit_on.c  bitmap.c  bitmap.h  blit.tc  hash.c  line.tc  m4.h  pixel.tc  sym.c
src/libbitblit/colorport/: README.port  mem_rop.tc
src/libbitblit/dec3100/: Makefile  bitmap.c  bitmap.h  line.c  pixel.c
src/libbitblit/movie/: share.c  timestamp.c
src/libbitblit/newport1/: Makefile  blit.tc  line.c
src/libbitblit/newport8/: Makefile  bitmap.h  pixel.c
src/libbitblit/oblit/: Makefile  README  bit_on.c  bitmap.c  blit.c
src/libbitblit/pixrect/: Bitmap.h  Makefile  Makefile.PR  sun.h
src/libbitblit/relics-of-an-ancient-past/Movieport/: bitmap.h  pixel.c
src/libbitblit/relics-of-an-ancient-past/blit/: Makefile
src/libbitblit/relics-of-an-ancient-past/colorport/: Makefile  bit_line.c  bit_point.c
src/libbitblit/relics-of-an-ancient-past/dec3100/: Makefile  blit.tc
src/libbitblit/relics-of-an-ancient-past/newport1/: Makefile  bitmap.h  pixel.c
src/libbitblit/relics-of-an-ancient-past/newport8/: README  blit.tc  line.c
src/libbitblit/relics-of-an-ancient-past/oblit/: bitmap.h  line.c  pixel.c
src/libbitblit/relics-of-an-ancient-past/pixrect/: bit_line.c  mem_rop.tc  sundep.c
src/libbitblit/relics-of-an-ancient-past/sunmono/: Makefile
src/libbitblit/sdl-backend/: bit_blit.c  bit_destroy.c  bit_initscreen.c  bit_line.c  bit_on.c  bit_point.c  bit_size.c  palette.c  screen.c  screen.h
src/libbitblit/seqbitmap/: Makefile  bit_load.c  bit_save.c  bitmapread.c  bitmapwrite.c
src/libbitblit/stub-backend/: Makefile  bit_blit.c  bit_destroy.c  bit_initscreen.c  bit_line.c  bit_on.c  bit_point.c  bitmap.c  bitmap.h  blit.c  mem_rop.c  screen.h
src/libbitblit/stub_lib/: Makefile  README  bit_blit.c  bit_on.c  bit_size.c  bitmap.c  bitmap.h  blit.c  line.c  palette.c  pixel.c  screen.c  screen.h  vga.h
src/libbitblit/test/: lines.c  monorop.c  rops.c
src/libmgr/: CMakeLists.txt  Makefile  ckmgrterm.c  hfont.c  is_mgr_term.c  m_bitc_send.c  m_bitfile.c  m_getborder.c  m_getdepth.c  m_getevent.c  m_getfontid.c  m_getfontn.c  m_getfonts.c  m_gethost.c  m_getpalette.c  m_getscreen.c  m_getwindowp.c  m_getwindows.c  m_localsrv.c  m_parse.c  m_setup.c  m_tty.c  oldinfo.c  term.c
src/mgr/: CMakeLists.txt  Makefile  README  Write.c  Write.h  border.c  clip.h  colormap.c  colormap.h  copyright.c  cut.c  data.c  debug_flags.c  defs.h  destroy.c  do_buckey.c  do_button.c  do_event.c  do_menu.c  do_menu.h  down_load.c  erase_win.c  event.h  font_subs.c  font_subs.h  get_font.c  get_info.c  get_info.h  get_menus.c  get_menus.h  get_rect.c  get_rect.h  get_text.c  get_text.h  getshell.c  graph_subs.c  intersect.c  kbd.c  menu.h  mgr.1  (+33 more)
src/tools/: CMakeLists.txt  bitmaptoc.c  fonttoc.c
