PROJECT(mgr C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

INCLUDE(CheckLibraryExists)

# Enable Mac OS X @rpath handling
CMAKE_POLICY(SET CMP0042 NEW)

# This needs to be in the root CMakeLists.txt.
ENABLE_TESTING()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")

OPTION(MGR_BUILD_DOCS "Build the MGR documentation." OFF)

# clang doesn't print colored diagnostics when invoked from Ninja
IF(UNIX AND
   CMAKE_C_COMPILER_ID STREQUAL "Clang" AND
   CMAKE_GENERATOR STREQUAL "Ninja")
  SET(CMAKE_C_FLAGS "-fcolor-diagnostics ${CMAKE_C_FLAGS}")
ENDIF()

SET(MGR_VERSION_MAJOR 0)
SET(MGR_VERSION_MINOR 1)
SET(MGR_VERSION_PATCH 0)
SET(MGR_VERSION "${MGR_VERSION_MAJOR}.${MGR_VERSION_MINOR}.${MGR_VERSION_PATCH}")

CHECK_LIBRARY_EXISTS(crypt crypt "" NEED_LIB_CRYPT)

ADD_SUBDIRECTORY(src)

IF(MGR_BUILD_DOCS)
  ADD_SUBDIRECTORY(doc)
ENDIF()

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/PackagingConfig.cmake)
