INCLUDE(AddCCompilerFlag)

ADD_C_COMPILER_FLAG(-Wall)
ADD_C_COMPILER_FLAG(-fstrict-aliasing)
ADD_C_COMPILER_FLAG(-Wstrict-aliasing)

OPTION(MGR_ENABLE_MOVIE "Build the movie code." OFF)
IF(MGR_ENABLE_MOVIE)
  ADD_DEFINITIONS(-DMOVIE)
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(libbitblit)
ADD_SUBDIRECTORY(libmgr)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(mgr)
ADD_SUBDIRECTORY(clients)
